--- a/index.html
+++ b/index.html
@@ -24,38 +24,41 @@
   	</ul>
 </nav>
             <!-- TradingView Widget BEGIN -->
-<div class="tradingview-widget-container">
+<div class="tradingview-widget-container" style="height:auto !important;">
   <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">Track all markets on TradingView</span></a></div>
-  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
+  <div class="tradingview-widget-copyright" style="display:none;"><a href="https://es.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">Siga los mercados en TradingView</span></a></div>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js" async>
   {
   "symbols": [
     {
-      "proName": "FX_IDC:USDARS/ DOLAR",
-      "title": "S&P 500 Index"
+      "description": "MERVAL",
+      "proName": "INDEX:IAR"
     },
     {
-      "proName": "FOREXCOM:NSXUSD",
-      "title": "US 100 Cash CFD"
+      "description": "NASDAQ",
+      "proName": "NASDAQ:NDX"
     },
     {
-      "proName": "FX_IDC:EURUSD",
-      "title": "EUR to USD"
+      "description": "BOVESPA",
+      "proName": "BMFBOVESPA:IBOV"
     },
     {
-      "proName": "BITSTAMP:BTCUSD",
-      "title": "Bitcoin"
+      "description": "S&P 500",
+      "proName": "BLACKBULL:SPX500"
     },
     {
-      "proName": "BITSTAMP:ETHUSD",
-      "title": "Ethereum"
+      "description": "DOW",
+      "proName": "FOREXCOM:DJI"
+    },
+    {
+      "description": "BTC/USD",
+      "proName": "BITSTAMP:BTCUSD"
     }
   ],
-  "showSymbolLogo": true,
   "isTransparent": false,
-  "displayMode": "adaptive",
+  "showSymbolLogo": true,
   "colorTheme": "light",
-  "locale": "en"
+  "locale": "es"
 }
   </script>
 </div>
@@ -86,15 +89,25 @@ El escándalo estalló hace diez días, cuando se hizo público que el gobierno 
 				<h3 class ="blue">Tras la polémica, la militante libertaria hot de 23 años dejó su cargo de directora en el Renaper</h3> Geraldine Calvella pudo disfrutar por poco tiempo del abultado sueldo que le dejaba su cargo como directora de Planeamiento y Fiscalización de Centros de Documentación en el Registro Nacional de las Personas (RENAPER). Según supo Clarín, la joven de 23 años desistió de asumir el trabajo que se le había encomendado, en medio de la polémica por su falta de experiencia en la materia, corta edad y breve recorrido universitario.
 
 El escándalo se había desatado hace diez días cuando trascendió la noticia de que el gobierno de Javier Milei había nombrado desde el 15 de enero a una militante libertaria sin diplomas ni experiencia en la materia como directora de Planeamiento y Fiscalización de Centros de Documentación, un cargo dependiente de la Dirección General de Planeamiento y Logística Documental dentro del Renaper, organismo bajo la órbita del Ministerio del Interior. Por su trabajo embolsaría mensualmente un sueldo bruto de 2,7 millones de pesos.</div>
-				<div class="item cinco"><iframe
-            style="width:320px;
+				<div class="item cinco">
+					<iframe
+            style="width:300px;
             height:260px;
             border-radius:10px;
             box-shadow:2px 4px 4px rgb(0 0 0 / 25%);
-            display:flex;
+            display:left;
             justify-content:center;
             border:1px solid #bcbcbc" src="https://dolarhoy.com/i/cotizaciones/dolar-blue" frameborder="0">
-        	</iframe></div>
+        	</iframe>
+        	  <iframe 
+        	  style="width:300px;
+        	  height:260px;
+        	  border-radius:10px;
+        	  box-shadow:2px 4px 4px rgb(0 0 0 / 25%);
+        	  display:left;
+        	  justify-content:center;
+        	  border:1px solid #bcbcbc" src="https://dolarhoy.com/i/cotizaciones/dolar-bancos-y-casas-de-cambio" frameborder="0"></iframe>
+        </div>
 				<div class="item seis"><!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
