--- a/index.html
+++ b/index.html
@@ -84,12 +84,10 @@
 
 The scandal erupted ten days ago when it was revealed that Javier Milei's government had appointed a libertarian activist, without diplomas or experience in the field, as Director of Planning and Inspection of Documentation Centers, a position under the Directorate General of Planning and Documentary Logistics within RENAPER, an agency under the Ministry of the Interior. For this role, Calvella would have received a gross monthly salary of 2.7 million pesos.</div>
 				<div class="item dos">
-					<h3 class="blue"> Melconian pronosticó una inflación de un dígito y advirtió sobre jubilaciones</h3>
-						En sintonía con Javier Milei, el economista Carlos Melconian también evalúa que en los próximos meses la inflación podría consolidarse en un dígito, "considerando las últimas medidas tomadas por el Gobierno". Melconian señaló que "se termina una etapa" y que los argentinos "estamos frente a un cambio cultural". Destacó la necesidad de ajustes económicos, indicando que la situación anterior era insostenible. Sugirió que la inflación mensual podría caer a un dígito durante un período de transición, dependiendo de varios factores, incluidas las políticas gubernamentales, la sostenibilidad monetaria y los desarrollos en el tipo de cambio.
+					<h3 class="blue"> El Gobierno derogaria el decreto 690/2020</h3>
+						En el Gobierno está trabajando para derogar el Decreto de Necesidad y Urgencia (DNU) 690/2020, que declaró como servicios públicos esenciales a internet, la telefonía y la televisión por cable. Este decreto permitió congelar precios y fijar aumentos tarifarios durante la administración de Alberto Fernández, generando medidas cautelares por parte de las compañías. Aunque fue promulgado en agosto de 2020 debido a la pandemia de covid-19, la medida se mantuvo incluso después de que la cuarentena terminara.
 
-Respecto a las pensiones, Melconian advirtió sobre la necesidad de modificar la fórmula, criticando al presidente Javier Milei por comparar las pensiones de diferentes años en dólares. Argumentó que en pesos, las pensiones están disminuyendo, y la cantidad de bonos adicionales emitidos por el gobierno en 2024 determinará su destino.
-
-Melconian concluyó enfatizando la importancia de resolver problemas institucionales en la democracia, destacando que el ajuste de las cuentas públicas actualmente realizado por el gobierno también habría sido necesario bajo una administración de Unión por la Patria.
+La derogación del decreto está en camino y se espera que se publique próximamente, pero el Gobierno asegura que no habrá aumentos significativos en los precios. La medida busca revertir los efectos negativos en el mercado de las comunicaciones y promover el desarrollo de servicios de calidad. Además, el Enacom ha cerrado sus delegaciones provinciales para optimizar el uso de recursos públicos, lo que podría dejar sin trabajo a unas 300 personas. La intervención del Enacom en enero también busca evaluar y modernizar el organismo.
 					</div>
 				<div class="item tres">
 					<h3 class ="blue">Tras la polémica, la militante libertaria hot de 23 años dejó su cargo de directora en el Renaper</h3>
